argocd/k8s/portal-real/overlays/prod/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-preview
  labels:
    app: front 
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: front
---

apiVersion: v1
kind: Service
metadata:
  name: backend-preview
  labels:
    app: back
spec:
  ports:
  - port: 8002
    targetPort: 8002
  selector:
    app: back
