argocd/k8s/portal-real/overlays/prod/policy-front.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: front-deny-egress
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: front
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {}
  egress: []
